update: samples package.json added private: true & workspaces

--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -113,7 +113,7 @@ jobs:
             e2e-
 
       - name: Install sample deps
-        # TODO Uncomment when yarn will work properly from the root and install all nessessary deps
+        # TODO Uncomment when yarn will work properly from the root and install all nessessary deps. Also please, add yarn install to the run section below instead of npx lerna exec
         # if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: |
           npx lerna exec --stream --scope="${{ matrix.container }}*" --concurrency=1 "yarn install"
