--- a/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
+++ b/advanced-api/dynamic-remotes-runtime-environment-variables/package.json
@@ -1,5 +1,11 @@
 {
   "name": "dynamic-remotes-runtime-environment-variables",
+  "private": true,
+  "workspaces": [
+    "./host",
+    "./remote"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel start",
     "build": "lerna run --scope=dynamic-remotes-runtime-environment-variables_* --parallel build",
