--- a/advanced-api/dynamic-remotes-synchronous-imports/package.json
+++ b/advanced-api/dynamic-remotes-synchronous-imports/package.json
@@ -1,5 +1,11 @@
 {
   "name": "dynamic-remotes-synchronous-imports",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel start",
     "build": "lerna run --scope=dynamic-remotes-synchronous-imports_app* --parallel build",
