--- a/angular14-react/package.json
+++ b/angular14-react/package.json
@@ -1,5 +1,10 @@
 {
   "name": "angular14-react",
+  "private": true,
+  "workspaces": [
+    "./angular-profile",
+    "./react-user-list"
+  ],
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
