--- a/cra/package.json
+++ b/cra/package.json
@@ -1,9 +1,10 @@
 {
+  "name": "cra",
   "private": true,
   "workspaces": {
     "packages": [
-      "host",
-      "remote"
+      "./host",
+      "./remote"
     ]
   },
   "scripts": {
