--- a/medusa-example/package.json
+++ b/medusa-example/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "medusa-example",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "./dsl",
+      "./home",
+      "./nav",
+      "./search",
+      "./utils"
+    ]
+  },
+  "version": "0.0.0",
   "scripts": {
     "start": "concurrently \"cd dsl; yarn start\" \"cd home; yarn start\" \"cd nav; yarn start\" \"cd search; yarn start\" \"cd utils; yarn start\"",
     "stackblitzStart": "cd dsl; yarn build && cd ../home; yarn build && cd ../nav; yarn build && cd ../search; yarn build && cd ../utils; yarn build && yarn serve",
@@ -11,15 +22,6 @@
     "serve:search": "cd search; yarn serve",
     "serve:utils": "cd utils; yarn serve",
     "clean": "lerna run --scope @dashboard/* --parallel clean"
-  },
-  "workspaces": {
-    "packages": [
-      "dsl",
-      "home",
-      "nav",
-      "search",
-      "utils"
-    ]
   },
   "devDependencies": {
     "concurrently": "7.5.0"
