--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "./different-react-versions-isolated/*",
       "./dynamic-system-host",
       "./dynamic-system-host/*",
+      "./native-federation-react",
       "./native-federation-react/*",
       "./nested",
       "./nested/*",
@@ -75,6 +76,8 @@
       "./startup-code/*",
       "./typescript-project-references",
       "./typescript-project-references/*",
+      "./umd-federation",
+      "./umd-federation/*",
       "./version-discrepancy",
       "./version-discrepancy/*",
       "./vite-react-microfrontends",
@@ -114,7 +117,6 @@
     "cypress": "10",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "1.7.2",
-    "hash-files": "1.1.1",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
