--- a/react-nextjs/react-host-remote/package.json
+++ b/react-nextjs/react-host-remote/package.json
@@ -1,6 +1,11 @@
 {
   "name": "react-host-remote",
-  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "./host",
+    "./remote"
+  ],
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
