--- a/self-healing/package.json
+++ b/self-healing/package.json
@@ -1,5 +1,11 @@
 {
   "name": "self-healing",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=self-healing_app* --parallel start",
     "build": "lerna run --scope=self-healing_app* build",
