--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,5 +1,11 @@
 {
+  "name": "typescript",
   "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope @typescript/* --parallel start",
     "build": "lerna run --scope @typescript/* build",
