--- a/umd-federation/package.json
+++ b/umd-federation/package.json
@@ -1,5 +1,10 @@
 {
   "name": "umd-federation",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
