--- a/advanced-api/automatic-vendor-sharing/package.json
+++ b/advanced-api/automatic-vendor-sharing/package.json
@@ -1,5 +1,11 @@
 {
   "name": "automatic-vendor-sharing",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=automatic-vendor-sharing_app* --parallel start",
     "build": "lerna run --scope=automatic-vendor-sharing_app* --parallel build",
