--- a/angular12-microfrontends/package.json
+++ b/angular12-microfrontends/package.json
@@ -1,5 +1,9 @@
 {
   "name": "angular12-microfrontends",
+  "private": true,
+  "workspaces": [
+    "./projects/*"
+  ],
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
