--- a/angular15-microfrontends-lazy-components/package.json
+++ b/angular15-microfrontends-lazy-components/package.json
@@ -1,5 +1,9 @@
 {
   "name": "angular15-microfrontends-lazy-components",
+  "private": true,
+  "workspaces": [
+    "./projects/*"
+  ],
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
