--- a/basic-host-remote/package.json
+++ b/basic-host-remote/package.json
@@ -1,5 +1,11 @@
 {
   "name": "basic-host-remote",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=basic-host-remote_app* --parallel start",
     "build": "lerna run --scope=basic-host-remote_app* --parallel build",
