--- a/css-isolation/package.json
+++ b/css-isolation/package.json
@@ -1,5 +1,11 @@
 {
   "name": "css-isolation",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=css-isolation_app* --parallel start",
     "build": "lerna run --scope=css-isolation_app* --parallel build",
