--- a/federated-npm/package.json
+++ b/federated-npm/package.json
@@ -1,12 +1,14 @@
 {
+  "name": "federated-npm",
   "private": true,
   "workspaces": {
     "packages": [
-      "app1",
-      "app2",
-      "app3"
+      "./app1",
+      "./app2",
+      "./app3"
     ]
   },
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --parallel start",
     "build": "lerna run build",
