--- a/i18next-nextjs-react/package.json
+++ b/i18next-nextjs-react/package.json
@@ -1,5 +1,12 @@
 {
   "name": "i18next-nextjs-react",
+  "private": true,
+  "workspaces": [
+    "./next-host",
+    "./react-host",
+    "./react-remote",
+    "./i18next-shared-lib"
+  ],
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,13 +14,6 @@
     "start": "concurrently \"cd next-host; npm run dev\" \"cd react-host; npm run start:live\" \"cd react-remote; npm run start:live\" \"cd i18next-shared-lib; npm run dev\"",
     "e2e:ci": "yarn start & wait-on http-get://localhost:3000/ && npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome"
   },
-  "private": true,
-  "workspaces": [
-    "next-host",
-    "react-host",
-    "react-remote",
-    "i18next-shared-lib"
-  ],
   "author": "Frédéric JAMMES",
   "license": "ISC",
   "devDependencies": {
