--- a/native-federation-react/package.json
+++ b/native-federation-react/package.json
@@ -1,5 +1,10 @@
 {
   "name": "native-federation-react",
+  "private": true,
+  "workspaces": [
+    "./host",
+    "./remote"
+  ],
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
