--- a/nextjs-antd/package.json
+++ b/nextjs-antd/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "nextjs-antd",
   "private": true,
   "workspaces": [
     "./3000-home",
@@ -6,6 +7,7 @@
     "./3002-checkout",
     "./shared"
   ],
+  "version": "0.0.0",
   "scripts": {
     "clear": "cd 3000-home && rm -rf node_modules && rm -rf .next && cd ../3001-shop && rm -rf node_modules && rm -rf .next && cd ../3002-checkout && rm -rf node_modules && rm -rf .next",
     "start": "yarn dev",
