--- a/nextjs-ssr/package.json
+++ b/nextjs-ssr/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "nextjs-ssr",
   "private": true,
   "workspaces": [
     "./checkout",
@@ -6,6 +7,7 @@
     "./shared",
     "./shop"
   ],
+  "version": "0.0.0",
   "scripts": {
     "start": "concurrently \"cd checkout; npm run dev\" \"cd home; npm run dev\" \"cd shop; npm run dev\"",
     "build": "concurrently \"cd checkout; npm run build\" \"cd home; npm run build\" \"cd shop; npm run build\"",
