--- a/nextjs-v12/package.json
+++ b/nextjs-v12/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "nextjs-v12",
   "private": true,
   "workspaces": [
     "./checkout",
@@ -6,6 +7,7 @@
     "./shared",
     "./shop"
   ],
+  "version": "0.0.0",
   "scripts": {
     "start": "concurrently \"npm --prefix checkout run dev\" \"npm --prefix home run dev\" \"npm --prefix shop run dev\"",
     "build": "concurrently \"npm --prefix checkout run build\" \"npm --prefix home run build\" \"npm --prefix shop run build\"",
