--- a/react-nextjs/nextjs-host-react-remote/package.json
+++ b/react-nextjs/nextjs-host-react-remote/package.json
@@ -1,16 +1,16 @@
 {
   "name": "nextjs-host-react-remote",
-  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "./host",
+    "./remote"
+  ],
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd host; npm run dev\" \"cd remote; npm run dev\""
   },
-  "private": true,
-  "workspaces": [
-    "host",
-    "remote"
-  ],
   "author": "Omher",
   "license": "ISC",
   "devDependencies": {
