--- a/server-side-rendering/package.json
+++ b/server-side-rendering/package.json
@@ -1,6 +1,12 @@
 {
   "name": "server-side-rendering",
-  "version": "1.0.0",
+  "private": true,
+  "workspaces": [
+    "./shell",
+    "./remote1",
+    "./remote2"
+  ],
+  "version": "0.0.0",
   "description": "Example of server side rendering with module federation using React 18 and Suspense",
   "author": "Adam Hammad <mail@adamham.dev>",
   "license": "MIT",
