--- a/version-discrepancy/package.json
+++ b/version-discrepancy/package.json
@@ -1,5 +1,11 @@
 {
   "name": "version-discrepancy",
+  "private": true,
+  "workspaces": [
+    "./app1",
+    "./app2"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "start": "lerna run --scope=version-discrepancy_app* --parallel start",
     "build": "lerna run --scope=version-discrepancy_app* build",
