--- a/vue3-demo-federation-with-vite/package.json
+++ b/vue3-demo-federation-with-vite/package.json
@@ -1,5 +1,11 @@
 {
   "name": "vue3-demo-federation-with-vite",
+  "private": true,
+  "workspaces": [
+    "./vite-side",
+    "./webpack-side"
+  ],
+  "version": "0.0.0",
   "scripts": {
     "build": "pnpm --parallel --filter \"./**\" build",
     "serve": "pnpm --parallel --filter \"./**\"  serve",
