upd: checkChangedWorkspaces.js script

--- a/package.json
+++ b/package.json
@@ -94,7 +94,8 @@
       "./nextjs-bi-directional/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./umd-federation/*"
+      "./umd-federation/*",
+      "./cypress"
     ],
     "nohoist": [
       "**/@types",
