--- a/nextjs-antd/3000-home/package.json
+++ b/nextjs-antd/3000-home/package.json
@@ -8,15 +8,15 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^5.1.2",
-    "antd": "^4.22.3",
+    "@module-federation/nextjs-mf": "5.1.2",
+    "antd": "4.22.3",
     "lodash": "4.17.21",
     "next": "12.2.2",
-    "next-compose-plugins": "^2.2.1",
+    "next-compose-plugins": "2.2.1",
     "nextjs-shared": "link:../shared",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "5.8.0"
   }
 }
