test(react-nested-routes): fix e2e tests and integrate new ones

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
       "./react-hmr/*",
       "./react-in-vue",
       "./react-in-vue/*",
+      "./react-nested-routers",
+      "./react-nested-routers/*",
       "./react-nextjs/react-host-remote",
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
