--- a/react-nested-routers/.gitignore
+++ b/react-nested-routers/.gitignore
@@ -114,3 +114,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Cypress folders
+**/cypress/videos/**
+**/cypress/downloads/**
+**/cypress/screenshots/**
