--- a/react-nested-routers/package.json
+++ b/react-nested-routers/package.json
@@ -1,10 +1,12 @@
 {
   "name": "react-nested-routers",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "run-p \"start -w app1\" \"start -w app2\" \"start -w shell\"",
+    "postinstall": "concurrently \"yarn --cwd ./app1 install\" \"yarn --cwd ./app2 install\" \"yarn --cwd ./shell install\"",
+    "start": "concurrently \"yarn --cwd ./app1 start\" \"yarn --cwd ./app2 start\" \"yarn --cwd ./shell start\"",
     "e2e:standalone": "npx cypress run --config-file ../cypress/config/cypress.config.ts --config '{\"supportFile\": \"../cypress/support/e2e.ts\"}' --spec \"./e2e/runAll*.cy.ts\" --browser=chrome",
-    "e2e:ci": "npm start & wait-on http-get://localhost:8080/ && npm run e2e:standalone"
+    "e2e:ci": "yarn start & wait-on http-get://localhost:8080/ && yarn e2e:standalone"
   },
   "repository": {
     "type": "git",
@@ -18,14 +20,8 @@
     "url": "https://github.com/nebarf/module-federation-react-router-dom/issues"
   },
   "homepage": "https://github.com/nebarf/module-federation-react-router-dom#readme",
-  "workspaces": [
-    "app1",
-    "app2",
-    "shell"
-  ],
   "devDependencies": {
-    "cypress": "^12.4.1",
-    "npm-run-all": "^4.1.5",
+    "concurrently": "^7.6.0",
     "wait-on": "^7.0.1"
   }
 }
