fix(typescript): update packages and fix example

--- a/typescript/app1/tsconfig.json
+++ b/typescript/app1/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "sourceMap": true,
     "strict": true,
-    "jsx": "react"
+    "jsx": "react-jsx",
+    "paths": {
+      "*": ["./@mf-types/*"]
+    }
   },
   "include": ["src/**/*"]
 }
