--- a/typescript/app2/tsconfig.json
+++ b/typescript/app2/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "sourceMap": true,
     "strict": true,
-    "jsx": "react"
+    "jsx": "react-jsx"
   },
   "include": ["src/**/*"]
 }
