--- a/nextjs-v12/shop/package.json
+++ b/nextjs-v12/shop/package.json
@@ -8,11 +8,11 @@
     "start": "next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.1",
-    "next": "12.3.4",
+    "@module-federation/nextjs-mf": "^6.0.1",
+    "next": "^12.3.4",
     "nextjs-shared": "file:../shared",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "webpack": "5.75.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0"
   }
 }
