--- a/nextjs-v12/home/package.json
+++ b/nextjs-v12/home/package.json
@@ -8,14 +8,14 @@
     "start": "next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.1",
-    "next": "12.3.4",
+    "@module-federation/nextjs-mf": "^6.0.1",
+    "next": "^12.3.4",
     "nextjs-shared": "file:../shared",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "webpack": "5.75.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0"
   },
   "devDependencies": {
-    "cross-env": "7.0.3"
+    "cross-env": "^7.0.3"
   }
 }
