--- a/angular12-microfrontends/package.json
+++ b/angular12-microfrontends/package.json
@@ -1,5 +1,9 @@
 {
   "name": "angular12-microfrontends",
+  "private": true,
+  "workspaces": [
+    "./projects/*"
+  ],
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -30,7 +34,7 @@
     "@angular-devkit/build-angular": "12.2.17",
     "@angular/cli": "12.2.17",
     "@angular/compiler-cli": "12.2.16",
-    "@types/jasmine": "4.0.3",
+    "@types/jasmine": "4.3.1",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "12.20.55",
     "codelyzer": "6.0.2",
