--- a/angular15-microfrontends-lazy-components/package.json
+++ b/angular15-microfrontends-lazy-components/package.json
@@ -1,5 +1,9 @@
 {
   "name": "angular15-microfrontends-lazy-components",
+  "private": true,
+  "workspaces": [
+    "./projects/*"
+  ],
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -33,7 +37,7 @@
     "@angular-devkit/build-angular": "15.0.4",
     "@angular/cli": "14.2.10",
     "@angular/compiler-cli": "15.0.4",
-    "@types/jasmine": "4.0.3",
+    "@types/jasmine": "4.3.1",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "12.20.55",
     "codelyzer": "6.0.2",
