--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
       "./different-react-versions-isolated/*",
       "./dynamic-system-host",
       "./dynamic-system-host/*",
+      "./native-federation-react",
       "./native-federation-react/*",
       "./nested",
       "./nested/*",
@@ -52,6 +53,8 @@
       "./react-hmr/*",
       "./react-in-vue",
       "./react-in-vue/*",
+      "./react-nested-routers",
+      "./react-nested-routers/*",
       "./react-nextjs/react-host-remote",
       "./react-nextjs/react-host-remote/*",
       "./redux-reducer-injection",
@@ -94,7 +97,8 @@
       "./nextjs-bi-directional/*",
       "./vue-cli/*",
       "./genesis/*",
-      "./umd-federation/*"
+      "./umd-federation/*",
+      "./cypress"
     ],
     "nohoist": [
       "**/@types",
@@ -111,12 +115,11 @@
     "cypress": "10",
     "cypress-fill-command": "^1.0.2",
     "cypress-wait-until": "1.7.2",
-    "hash-files": "1.1.1",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
     "mocha": "10.1.0",
-    "prettier": "2.7.1",
+    "prettier": "2.8.3",
     "pretty-quick": "3.1.3",
     "wait-on": "7.0.1"
   },
