--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
       "./startup-code/*",
       "./typescript-project-references",
       "./typescript-project-references/*",
+      "./umd-federation",
+      "./umd-federation/*",
       "./version-discrepancy",
       "./version-discrepancy/*",
       "./vite-react-microfrontends",
