fix(vite-react-simple): Added yarn workspaces and single start command

--- a/vite-react-simple/webpack-spa/package.json
+++ b/vite-react-simple/webpack-spa/package.json
@@ -9,10 +9,10 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.14.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "serve": "^13.0.0"
+    "@babel/preset-env": "7.14.7",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "serve": "13.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.18.9",
