--- a/angular-universal-ssr/host-app/angular.json
+++ b/angular-universal-ssr/host-app/angular.json
@@ -50,8 +50,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -141,7 +146,9 @@
           "options": {
             "browserTarget": "host-app:build:production",
             "serverTarget": "host-app:server:production",
-            "routes": ["/"]
+            "routes": [
+              "/"
+            ]
           },
           "configurations": {
             "production": {}
