fix(typescript): updated plugin version to latest free version (#2676)
* fix(typescript): updated plugin version to latest free

* fix(typescript): fix comments of p42

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Fixed conflicts

* Update package.json

* Update package.json

* Update checkUmdFederationApps.cy.ts

* fix(typescript): fixed version of plugins and webpack config

* fix(typescript): fixed version of plugins and webpack config

--- a/typescript/app1/tsconfig.json
+++ b/typescript/app1/tsconfig.json
@@ -3,6 +3,7 @@
     "sourceMap": true,
     "strict": true,
     "jsx": "react-jsx",
+    "baseUrl": ".",
     "paths": {
       "*": ["./@mf-types/*"]
     }
