Updating packages to v12

--- a/angular-universal-ssr/host-app/package.json
+++ b/angular-universal-ssr/host-app/package.json
@@ -9,32 +9,32 @@
     "lint": "ng lint",
     "dev:ssr": "ng run host-app:serve-ssr",
     "serve:ssr": "node dist/host-app/server/main.js",
-    "build:ssr": "ng build --prod && ng run host-app:server:production",
+    "build:ssr": "ng build --configuration production && ng run host-app:server:production",
     "build:federation": "webpack",
     "serve:federation": "node dist/server/main.js",
     "clean": "rm -rf dist"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/platform-server": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/animations": "~12.2.17",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/platform-server": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "@nguniversal/express-engine": "^11.1.0",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.0"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.19",
-    "@angular/cli": "11.2.19",
-    "@angular/compiler-cli": "11.2.14",
+    "@angular-devkit/build-angular": "12.2.18",
+    "@angular/cli": "12.2.18",
+    "@angular/compiler-cli": "12.2.17",
     "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
     "@nguniversal/builders": "9.1.1",
     "clean-webpack-plugin": "4.0.0",
@@ -43,7 +43,7 @@
     "sass-loader": "12.6.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.8",
+    "typescript": "4.3.5",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0"
   }
