Updating client app to v14

--- a/angular-universal-ssr/client-app/package.json
+++ b/angular-universal-ssr/client-app/package.json
@@ -15,14 +15,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.12",
-    "@angular/common": "~13.3.12",
-    "@angular/compiler": "~13.3.12",
-    "@angular/core": "~13.3.12",
-    "@angular/forms": "~13.3.12",
-    "@angular/platform-browser": "~13.3.12",
-    "@angular/platform-browser-dynamic": "~13.3.12",
-    "@angular/router": "~13.3.12",
+    "@angular/animations": "^14.2.12",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
     "rxjs": "~6.6.0",
     "serve": "^13.0.0",
     "tslib": "^2.0.0",
@@ -30,9 +30,9 @@
   },
   "devDependencies": {
     "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
-    "@angular-devkit/build-angular": "13.3.10",
-    "@angular/cli": "13.3.10",
-    "@angular/compiler-cli": "13.3.12",
+    "@angular-devkit/build-angular": "14.2.10",
+    "@angular/cli": "14.2.10",
+    "@angular/compiler-cli": "14.2.12",
     "@types/node": "12.20.55",
     "clean-webpack-plugin": "4.0.0",
     "html-webpack-plugin": "5.5.0",
