--- a/angular-universal-ssr/client-app/angular.json
+++ b/angular-universal-ssr/client-app/angular.json
@@ -2,8 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "yarn",
-    "analytics": "25a12cdb-b6c1-4364-a639-02e727a39c00"
+    "packageManager": "yarn"
   },
   "newProjectRoot": "projects",
   "projects": {
