--- a/react-nested-routers/shell/package.json
+++ b/react-nested-routers/shell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell",
+  "name": "react-nested-routers_shell",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
