--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
     "test": "jest test/index.spec.js --maxWorkers=2",
     "postinstall": "git pull --recurse-submodules",
     "cypress:debug": "cypress open --e2e --config-file cypress/config/cypress.config.ts --browser=chrome",
-    "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome"
+    "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome",
+    "report:generate": "allure generate ./cypress/results/allure-results --clean -o ./cypress/report",
+    "report: open": "allure open ./cypress/report"
   }
 }
