Fixing lib errors and remove tar file

--- a/angular-universal-ssr/client-app/angular.json
+++ b/angular-universal-ssr/client-app/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "yarn"
+    "packageManager": "yarn",
+    "analytics": "e9693d44-eea8-4fdb-918a-9139355769eb"
   },
   "newProjectRoot": "projects",
   "projects": {
