--- a/angular-universal-ssr/host-app/package.json
+++ b/angular-universal-ssr/host-app/package.json
@@ -28,7 +28,7 @@
     "@angular/router": "^15.1.2",
     "@nguniversal/express-engine": "^15.1.0",
     "express": "^4.17.3",
-    "rxjs": "~7.5.6",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.5"
   },
@@ -36,7 +36,7 @@
     "@angular-devkit/build-angular": "15.1.4",
     "@angular/cli": "15.1.4",
     "@angular/compiler-cli": "15.1.2",
-    "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
+    "@ngtools/webpack": "15.1.4",
     "@nguniversal/builders": "15.1.0",
     "clean-webpack-plugin": "4.0.0",
     "html-webpack-plugin": "5.5.0",
