--- a/angular-universal-ssr/client-app/package.json
+++ b/angular-universal-ssr/client-app/package.json
@@ -23,13 +23,13 @@
     "@angular/platform-browser": "^15.1.2",
     "@angular/platform-browser-dynamic": "^15.1.2",
     "@angular/router": "^15.1.2",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.8.0",
     "serve": "^13.0.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@ngtools/webpack": "file:../patched_packages/_ngtools_webpack.tgz",
+    "@ngtools/webpack": "15.1.4",
     "@angular-devkit/build-angular": "15.1.4",
     "@angular/cli": "15.1.4",
     "@angular/compiler-cli": "15.1.2",
