--- a/angular-universal-ssr/host-app/angular.json
+++ b/angular-universal-ssr/host-app/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "yarn"
+    "packageManager": "yarn",
+    "analytics": "00254bfe-36c5-4063-afd7-8def92406660"
   },
   "newProjectRoot": "projects",
   "projects": {
